compiler/kernc_cli/tests/soundness/run-pass/projection/generic_associated_projection_with_type_arg_normalizes.rn
// class: projection-normalization
// source: a concrete projection through a generic associated type must substitute the assoc args before normalizing
// exit: 0

trait Mapper {
    type Apply[T];
};

struct Id {};

impl Id: Mapper {
    type Apply[T] = T;
}

fn lift(value: Id.Mapper.Apply[i32]) Id.Mapper.Apply[i32] {
    return value;
}

fn main() i32 {
    return lift(7) - 7;
}
